changed style.css to fix clue animation overlapping issue in chrome

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body {
   grid-column: 1 / 4;
   padding: 5px;
   width: 200px;
-  height: 30px;
+  height: 30px !important;
   text-align: center;
 }
 
